fix: Type overflowing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,7 +87,7 @@ button:hover {
 }
 .type {
   width: fit-content;
-  padding: 10px;
+  padding: 5px 10px;
   border-radius: 10px;
   margin-right: 5px;
   float: left;
